--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,28 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+ .container{
+  display:flex; 
+  flex-direction:column;
+  align-items: center;
+ }
+ button{
+  font-size: 1cm;
+  border:0ch;
+  padding: 0;
+  background: none;
+  cursor: pointer;
+ }
+  
+ ul{
+  display: flex;
+  padding: 0;
+
+ }
+ li{
+  list-style-type: none;
+  margin: 20px;
+  padding: 0;
+
+ }
